docs/api/qiskit/0.25/qiskit.quantum_info.Operator.mdx
---
title: Operator
description: API reference for qiskit.quantum_info.Operator
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.quantum_info.Operator
---

# qiskit.quantum\_info.Operator

<Class id="qiskit.quantum_info.Operator" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/quantum_info/operators/operator.py" signature="Operator(data, input_dims=None, output_dims=None)">
  Matrix operator class

  This represents a matrix operator $M$ that will [`evolve()`](qiskit.quantum_info.Statevector#evolve "qiskit.quantum_info.Statevector.evolve") a [`Statevector`](qiskit.quantum_info.Statevector "qiskit.quantum_info.Statevector") $|\psi\rangle$ by matrix-vector multiplication

$$
|\psi\rangle \mapsto M|\psi\rangle,
$$

  and will [`evolve()`](qiskit.quantum_info.DensityMatrix#evolve "qiskit.quantum_info.DensityMatrix.evolve") a [`DensityMatrix`](qiskit.quantum_info.DensityMatrix "qiskit.quantum_info.DensityMatrix") $\rho$ by left and right multiplication

$$
\rho \mapsto M \rho M^\dagger.
$$

  Initialize an operator object.

  **Parameters**

  *   \*\*(\*\***QuantumCircuit or** (*data*) – Instruction or BaseOperator or matrix): data to initialize operator.
  *   **input\_dims** (*tuple*) – the input subsystem dimensions. \[Default: None]
  *   **output\_dims** (*tuple*) – the output subsystem dimensions. \[Default: None]

  **Raises**

  **QiskitError** – if input data cannot be initialized as an operator.

  **Additional Information:**

  If the input or output dimensions are None, they will be automatically determined from the input data. If the input data is a Numpy array of shape (2\*\*N, 2\*\*N) qubit systems will be used. If the input operator is not an N-qubit operator, it will assign a single subsystem with dimension specified by the shape of the input.

  ### \_\_init\_\_

  <Function id="qiskit.quantum_info.Operator.__init__" name="__init__" signature="__init__(data, input_dims=None, output_dims=None)">
    Initialize an operator object.

    **Parameters**

    *   \*\*(\*\***QuantumCircuit or** (*data*) – Instruction or BaseOperator or matrix): data to initialize operator.
    *   **input\_dims** (*tuple*) – the input subsystem dimensions. \[Default: None]
    *   **output\_dims** (*tuple*) – the output subsystem dimensions. \[Default: None]

    **Raises**

    **QiskitError** – if input data cannot be initialized as an operator.

    **Additional Information:**

    If the input or output dimensions are None, they will be automatically determined from the input data. If the input data is a Numpy array of shape (2\*\*N, 2\*\*N) qubit systems will be used. If the input operator is not an N-qubit operator, it will assign a single subsystem with dimension specified by the shape of the input.
  </Function>

  ## Methods

  |                                                                                                                                      |                                                                            |
  | ------------------------------------------------------------------------------------------------------------------------------------ | -------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.quantum_info.Operator.__init__ "qiskit.quantum_info.Operator.__init__")(data\[, input\_dims, output\_dims])     | Initialize an operator object.                                             |
  | [`adjoint`](#qiskit.quantum_info.Operator.adjoint "qiskit.quantum_info.Operator.adjoint")()                                          | Return the adjoint of the Operator.                                        |
  | [`compose`](#qiskit.quantum_info.Operator.compose "qiskit.quantum_info.Operator.compose")(other\[, qargs, front])                    | Return the operator composition with another Operator.                     |
  | [`conjugate`](#qiskit.quantum_info.Operator.conjugate "qiskit.quantum_info.Operator.conjugate")()                                    | Return the conjugate of the Operator.                                      |
  | [`copy`](#qiskit.quantum_info.Operator.copy "qiskit.quantum_info.Operator.copy")()                                                   | Make a deep copy of current operator.                                      |
  | [`dot`](#qiskit.quantum_info.Operator.dot "qiskit.quantum_info.Operator.dot")(other\[, qargs])                                       | Return the right multiplied operator self \* other.                        |
  | [`equiv`](#qiskit.quantum_info.Operator.equiv "qiskit.quantum_info.Operator.equiv")(other\[, rtol, atol])                            | Return True if operators are equivalent up to global phase.                |
  | [`expand`](#qiskit.quantum_info.Operator.expand "qiskit.quantum_info.Operator.expand")(other)                                        | Return the reverse-order tensor product with another Operator.             |
  | [`from_label`](#qiskit.quantum_info.Operator.from_label "qiskit.quantum_info.Operator.from_label")(label)                            | Return a tensor product of single-qubit operators.                         |
  | [`input_dims`](#qiskit.quantum_info.Operator.input_dims "qiskit.quantum_info.Operator.input_dims")(\[qargs])                         | Return tuple of input dimension for specified subsystems.                  |
  | [`is_unitary`](#qiskit.quantum_info.Operator.is_unitary "qiskit.quantum_info.Operator.is_unitary")(\[atol, rtol])                    | Return True if operator is a unitary matrix.                               |
  | [`output_dims`](#qiskit.quantum_info.Operator.output_dims "qiskit.quantum_info.Operator.output_dims")(\[qargs])                      | Return tuple of output dimension for specified subsystems.                 |
  | [`power`](#qiskit.quantum_info.Operator.power "qiskit.quantum_info.Operator.power")(n)                                               | Return the matrix power of the operator.                                   |
  | [`reshape`](#qiskit.quantum_info.Operator.reshape "qiskit.quantum_info.Operator.reshape")(\[input\_dims, output\_dims, num\_qubits]) | Return a shallow copy with reshaped input and output subsystem dimensions. |
  | [`reverse_qargs`](#qiskit.quantum_info.Operator.reverse_qargs "qiskit.quantum_info.Operator.reverse_qargs")()                        | Return an Operator with reversed subsystem ordering.                       |
  | [`tensor`](#qiskit.quantum_info.Operator.tensor "qiskit.quantum_info.Operator.tensor")(other)                                        | Return the tensor product with another Operator.                           |
  | [`to_instruction`](#qiskit.quantum_info.Operator.to_instruction "qiskit.quantum_info.Operator.to_instruction")()                     | Convert to a UnitaryGate instruction.                                      |
  | [`to_operator`](#qiskit.quantum_info.Operator.to_operator "qiskit.quantum_info.Operator.to_operator")()                              | Convert operator to matrix operator class                                  |
  | [`transpose`](#qiskit.quantum_info.Operator.transpose "qiskit.quantum_info.Operator.transpose")()                                    | Return the transpose of the Operator.                                      |

  ## Attributes

  |                                                                                                    |                                                                      |
  | -------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------- |
  | [`atol`](#qiskit.quantum_info.Operator.atol "qiskit.quantum_info.Operator.atol")                   | Default absolute tolerance parameter for float comparisons.          |
  | [`data`](#qiskit.quantum_info.Operator.data "qiskit.quantum_info.Operator.data")                   | Return data.                                                         |
  | [`dim`](#qiskit.quantum_info.Operator.dim "qiskit.quantum_info.Operator.dim")                      | Return tuple (input\_shape, output\_shape).                          |
  | [`num_qubits`](#qiskit.quantum_info.Operator.num_qubits "qiskit.quantum_info.Operator.num_qubits") | Return the number of qubits if a N-qubit operator or None otherwise. |
  | [`qargs`](#qiskit.quantum_info.Operator.qargs "qiskit.quantum_info.Operator.qargs")                | Return the qargs for the operator.                                   |
  | [`rtol`](#qiskit.quantum_info.Operator.rtol "qiskit.quantum_info.Operator.rtol")                   | Default relative tolerance parameter for float comparisons.          |

  ### adjoint

  <Function id="qiskit.quantum_info.Operator.adjoint" name="adjoint" signature="adjoint()">
    Return the adjoint of the Operator.
  </Function>

  ### atol

  <Function id="qiskit.quantum_info.Operator.atol" name="atol" signature="property atol">
    Default absolute tolerance parameter for float comparisons.
  </Function>

  ### compose

  <Function id="qiskit.quantum_info.Operator.compose" name="compose" signature="compose(other, qargs=None, front=False)">
    Return the operator composition with another Operator.

    **Parameters**

    *   **other** ([*Operator*](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – a Operator object.
    *   **qargs** (*list or None*) – Optional, a list of subsystem positions to apply other on. If None apply on all subsystems (default: None).
    *   **front** (*bool*) – If True compose using right operator multiplication, instead of left multiplication \[default: False].

    **Returns**

    The composed Operator.

    **Return type**

    [Operator](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")

    **Raises**

    **QiskitError** – if other cannot be converted to an operator, or has incompatible dimensions for specified subsystems.

    <Admonition title="Note" type="note">
      Composition (`&`) by default is defined as left matrix multiplication for matrix operators, while [`dot()`](#qiskit.quantum_info.Operator.dot "qiskit.quantum_info.Operator.dot") is defined as right matrix multiplication. That is that `A & B == A.compose(B)` is equivalent to `B.dot(A)` when `A` and `B` are of the same type.

      Setting the `front=True` kwarg changes this to right matrix multiplication and is equivalent to the [`dot()`](#qiskit.quantum_info.Operator.dot "qiskit.quantum_info.Operator.dot") method `A.dot(B) == A.compose(B, front=True)`.
    </Admonition>
  </Function>

  ### conjugate

  <Function id="qiskit.quantum_info.Operator.conjugate" name="conjugate" signature="conjugate()">
    Return the conjugate of the Operator.
  </Function>

  ### copy

  <Function id="qiskit.quantum_info.Operator.copy" name="copy" signature="copy()">
    Make a deep copy of current operator.
  </Function>

  ### data

  <Function id="qiskit.quantum_info.Operator.data" name="data" signature="property data">
    Return data.
  </Function>

  ### dim

  <Function id="qiskit.quantum_info.Operator.dim" name="dim" signature="property dim">
    Return tuple (input\_shape, output\_shape).
  </Function>

  ### dot

  <Function id="qiskit.quantum_info.Operator.dot" name="dot" signature="dot(other, qargs=None)">
    Return the right multiplied operator self \* other.

    **Parameters**

    *   **other** ([*Operator*](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – an operator object.
    *   **qargs** (*list or None*) – Optional, a list of subsystem positions to apply other on. If None apply on all subsystems (default: None).

    **Returns**

    The right matrix multiplied Operator.

    **Return type**

    [Operator](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")
  </Function>

  ### equiv

  <Function id="qiskit.quantum_info.Operator.equiv" name="equiv" signature="equiv(other, rtol=None, atol=None)">
    Return True if operators are equivalent up to global phase.

    **Parameters**

    *   **other** ([*Operator*](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – an operator object.
    *   **rtol** (*float*) – relative tolerance value for comparison.
    *   **atol** (*float*) – absolute tolerance value for comparison.

    **Returns**

    True if operators are equivalent up to global phase.

    **Return type**

    bool
  </Function>

  ### expand

  <Function id="qiskit.quantum_info.Operator.expand" name="expand" signature="expand(other)">
    Return the reverse-order tensor product with another Operator.

    **Parameters**

    **other** ([*Operator*](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – a Operator object.

    **Returns**

    **the tensor product $b \otimes a$, where $a$**

    is the current Operator, and $b$ is the other Operator.

    **Return type**

    [Operator](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")
  </Function>

  ### from\_label

  <Function id="qiskit.quantum_info.Operator.from_label" name="from_label" signature="classmethod from_label(label)">
    Return a tensor product of single-qubit operators.

    **Parameters**

    **label** (*string*) – single-qubit operator string.

    **Returns**

    The N-qubit operator.

    **Return type**

    [Operator](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")

    **Raises**

    **QiskitError** – if the label contains invalid characters, or the length of the label is larger than an explicitly specified num\_qubits.

    **Additional Information:**

    The labels correspond to the single-qubit matrices: ‘I’: \[\[1, 0], \[0, 1]] ‘X’: \[\[0, 1], \[1, 0]] ‘Y’: \[\[0, -1j], \[1j, 0]] ‘Z’: \[\[1, 0], \[0, -1]] ‘H’: \[\[1, 1], \[1, -1]] / sqrt(2) ‘S’: \[\[1, 0], \[0 , 1j]] ‘T’: \[\[1, 0], \[0, (1+1j) / sqrt(2)]] ‘0’: \[\[1, 0], \[0, 0]] ‘1’: \[\[0, 0], \[0, 1]] ‘+’: \[\[0.5, 0.5], \[0.5 , 0.5]] ‘-‘: \[\[0.5, -0.5], \[-0.5 , 0.5]] ‘r’: \[\[0.5, -0.5j], \[0.5j , 0.5]] ‘l’: \[\[0.5, 0.5j], \[-0.5j , 0.5]]
  </Function>

  ### input\_dims

  <Function id="qiskit.quantum_info.Operator.input_dims" name="input_dims" signature="input_dims(qargs=None)">
    Return tuple of input dimension for specified subsystems.
  </Function>

  ### is\_unitary

  <Function id="qiskit.quantum_info.Operator.is_unitary" name="is_unitary" signature="is_unitary(atol=None, rtol=None)">
    Return True if operator is a unitary matrix.
  </Function>

  ### num\_qubits

  <Function id="qiskit.quantum_info.Operator.num_qubits" name="num_qubits" signature="property num_qubits">
    Return the number of qubits if a N-qubit operator or None otherwise.
  </Function>

  ### output\_dims

  <Function id="qiskit.quantum_info.Operator.output_dims" name="output_dims" signature="output_dims(qargs=None)">
    Return tuple of output dimension for specified subsystems.
  </Function>

  ### power

  <Function id="qiskit.quantum_info.Operator.power" name="power" signature="power(n)">
    Return the matrix power of the operator.

    **Parameters**

    **n** (*float*) – the power to raise the matrix to.

    **Returns**

    the resulting operator `O ** n`.

    **Return type**

    [Operator](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")

    **Raises**

    **QiskitError** – if the input and output dimensions of the operator are not equal.
  </Function>

  ### qargs

  <Function id="qiskit.quantum_info.Operator.qargs" name="qargs" signature="property qargs">
    Return the qargs for the operator.
  </Function>

  ### reshape

  <Function id="qiskit.quantum_info.Operator.reshape" name="reshape" signature="reshape(input_dims=None, output_dims=None, num_qubits=None)">
    Return a shallow copy with reshaped input and output subsystem dimensions.

    **Parameters**

    *   **input\_dims** (*None or tuple*) – new subsystem input dimensions. If None the original input dims will be preserved \[Default: None].
    *   **output\_dims** (*None or tuple*) – new subsystem output dimensions. If None the original output dims will be preserved \[Default: None].
    *   **num\_qubits** (*None or int*) – reshape to an N-qubit operator \[Default: None].

    **Returns**

    returns self with reshaped input and output dimensions.

    **Return type**

    BaseOperator

    **Raises**

    **QiskitError** – if combined size of all subsystem input dimension or subsystem output dimensions is not constant.
  </Function>

  ### reverse\_qargs

  <Function id="qiskit.quantum_info.Operator.reverse_qargs" name="reverse_qargs" signature="reverse_qargs()">
    Return an Operator with reversed subsystem ordering.

    For a tensor product operator this is equivalent to reversing the order of tensor product subsystems. For an operator $A = A_{n-1} \otimes ... \otimes A_0$ the returned operator will be $A_0 \otimes ... \otimes A_{n-1}$.

    **Returns**

    the operator with reversed subsystem order.

    **Return type**

    [Operator](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")
  </Function>

  ### rtol

  <Function id="qiskit.quantum_info.Operator.rtol" name="rtol" signature="property rtol">
    Default relative tolerance parameter for float comparisons.
  </Function>

  ### tensor

  <Function id="qiskit.quantum_info.Operator.tensor" name="tensor" signature="tensor(other)">
    Return the tensor product with another Operator.

    **Parameters**

    **other** ([*Operator*](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – a Operator object.

    **Returns**

    **the tensor product $a \otimes b$, where $a$**

    is the current Operator, and $b$ is the other Operator.

    **Return type**

    [Operator](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")

    <Admonition title="Note" type="note">
      The tensor product can be obtained using the `^` binary operator. Hence `a.tensor(b)` is equivalent to `a ^ b`.
    </Admonition>
  </Function>

  ### to\_instruction

  <Function id="qiskit.quantum_info.Operator.to_instruction" name="to_instruction" signature="to_instruction()">
    Convert to a UnitaryGate instruction.
  </Function>

  ### to\_operator

  <Function id="qiskit.quantum_info.Operator.to_operator" name="to_operator" signature="to_operator()">
    Convert operator to matrix operator class
  </Function>

  ### transpose

  <Function id="qiskit.quantum_info.Operator.transpose" name="transpose" signature="transpose()">
    Return the transpose of the Operator.
  </Function>
</Class>

