docs/api/qiskit/0.35/qiskit.quantum_info.Operator.mdx
---
title: Operator (v0.35)
description: API reference for qiskit.quantum_info.Operator in qiskit v0.35
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.quantum_info.Operator
---

# Operator

<Class id="qiskit.quantum_info.Operator" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.20/qiskit/quantum_info/operators/operator.py" signature="Operator(data, input_dims=None, output_dims=None)" modifiers="class">
  Bases: `qiskit.quantum_info.operators.linear_op.LinearOp`

  Matrix operator class

  This represents a matrix operator $M$ that will [`evolve()`](qiskit.quantum_info.Statevector#evolve "qiskit.quantum_info.Statevector.evolve") a [`Statevector`](qiskit.quantum_info.Statevector "qiskit.quantum_info.Statevector") $|\psi\rangle$ by matrix-vector multiplication

$$
|\psi\rangle \mapsto M|\psi\rangle,
$$

  and will [`evolve()`](qiskit.quantum_info.DensityMatrix#evolve "qiskit.quantum_info.DensityMatrix.evolve") a [`DensityMatrix`](qiskit.quantum_info.DensityMatrix "qiskit.quantum_info.DensityMatrix") $\rho$ by left and right multiplication

$$
\rho \mapsto M \rho M^\dagger.
$$

  Initialize an operator object.

  **Parameters**

  *   \*\*(\*\***QuantumCircuit or** (*data*) – Instruction or BaseOperator or matrix): data to initialize operator.
  *   **input\_dims** (*tuple*) – the input subsystem dimensions. \[Default: None]
  *   **output\_dims** (*tuple*) – the output subsystem dimensions. \[Default: None]

  **Raises**

  **QiskitError** – if input data cannot be initialized as an operator.

  **Additional Information:**

  If the input or output dimensions are None, they will be automatically determined from the input data. If the input data is a Numpy array of shape (2\*\*N, 2\*\*N) qubit systems will be used. If the input operator is not an N-qubit operator, it will assign a single subsystem with dimension specified by the shape of the input.

  ## Methods

  <span id="qiskit-quantum-info-operator-adjoint" />

  ### adjoint

  <Function id="qiskit.quantum_info.Operator.adjoint" signature="Operator.adjoint()">
    Return the adjoint of the Operator.
  </Function>

  <span id="qiskit-quantum-info-operator-compose" />

  ### compose

  <Function id="qiskit.quantum_info.Operator.compose" signature="Operator.compose(other, qargs=None, front=False)">
    Return the operator composition with another Operator.

    **Parameters**

    *   **other** ([*Operator*](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – a Operator object.
    *   **qargs** (*list or None*) – Optional, a list of subsystem positions to apply other on. If None apply on all subsystems (default: None).
    *   **front** (*bool*) – If True compose using right operator multiplication, instead of left multiplication \[default: False].

    **Returns**

    The composed Operator.

    **Return type**

    [Operator](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")

    **Raises**

    **QiskitError** – if other cannot be converted to an operator, or has incompatible dimensions for specified subsystems.

    <Admonition title="Note" type="note">
      Composition (`&`) by default is defined as left matrix multiplication for matrix operators, while [`dot()`](qiskit.quantum_info.Operator#dot "qiskit.quantum_info.Operator.dot") is defined as right matrix multiplication. That is that `A & B == A.compose(B)` is equivalent to `B.dot(A)` when `A` and `B` are of the same type.

      Setting the `front=True` kwarg changes this to right matrix multiplication and is equivalent to the [`dot()`](qiskit.quantum_info.Operator#dot "qiskit.quantum_info.Operator.dot") method `A.dot(B) == A.compose(B, front=True)`.
    </Admonition>
  </Function>

  <span id="qiskit-quantum-info-operator-conjugate" />

  ### conjugate

  <Function id="qiskit.quantum_info.Operator.conjugate" signature="Operator.conjugate()">
    Return the conjugate of the Operator.
  </Function>

  <span id="qiskit-quantum-info-operator-copy" />

  ### copy

  <Function id="qiskit.quantum_info.Operator.copy" signature="Operator.copy()">
    Make a deep copy of current operator.
  </Function>

  <span id="qiskit-quantum-info-operator-dot" />

  ### dot

  <Function id="qiskit.quantum_info.Operator.dot" signature="Operator.dot(other, qargs=None)">
    Return the right multiplied operator self \* other.

    **Parameters**

    *   **other** ([*Operator*](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – an operator object.
    *   **qargs** (*list or None*) – Optional, a list of subsystem positions to apply other on. If None apply on all subsystems (default: None).

    **Returns**

    The right matrix multiplied Operator.

    **Return type**

    [Operator](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")
  </Function>

  <span id="qiskit-quantum-info-operator-equiv" />

  ### equiv

  <Function id="qiskit.quantum_info.Operator.equiv" signature="Operator.equiv(other, rtol=None, atol=None)">
    Return True if operators are equivalent up to global phase.

    **Parameters**

    *   **other** ([*Operator*](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – an operator object.
    *   **rtol** (*float*) – relative tolerance value for comparison.
    *   **atol** (*float*) – absolute tolerance value for comparison.

    **Returns**

    True if operators are equivalent up to global phase.

    **Return type**

    bool
  </Function>

  <span id="qiskit-quantum-info-operator-expand" />

  ### expand

  <Function id="qiskit.quantum_info.Operator.expand" signature="Operator.expand(other)">
    Return the reverse-order tensor product with another Operator.

    **Parameters**

    **other** ([*Operator*](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – a Operator object.

    **Returns**

    **the tensor product $b \otimes a$, where $a$**

    is the current Operator, and $b$ is the other Operator.

    **Return type**

    [Operator](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")
  </Function>

  <span id="qiskit-quantum-info-operator-from-circuit" />

  ### from\_circuit

  <Function id="qiskit.quantum_info.Operator.from_circuit" signature="Operator.from_circuit(circuit, ignore_set_layout=False, layout=None)" modifiers="classmethod">
    Create a new Operator object from a :class\`.QuantumCircuit\`

    While a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") object can passed directly as `data` to the class constructor this provides no options on how the circuit is used to create an [`Operator`](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator"). This constructor method lets you control how the [`Operator`](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator") is created so it can be adjusted for a particular use case.

    By default this constructor method will permute the qubits based on a configured initial layout (i.e. after it was transpiled). It also provides an option to manually provide a [`Layout`](qiskit.transpiler.Layout "qiskit.transpiler.Layout") object directly.

    **Parameters**

    *   **circuit** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – The [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") to create an Operator object from.
    *   **ignore\_set\_layout** (*bool*) – When set to `True` if the input `circuit` has a layout set it will be ignored
    *   **layout** ([*Layout*](qiskit.transpiler.Layout "qiskit.transpiler.Layout")) – If specified this kwarg can be used to specify a particular layout to use to permute the qubits in the created [`Operator`](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator"). If this is specified it will be used instead of a layout contained in the `circuit` input.

    **Returns**

    An operator representing the input circuit

    **Return type**

    [Operator](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")
  </Function>

  <span id="qiskit-quantum-info-operator-from-label" />

  ### from\_label

  <Function id="qiskit.quantum_info.Operator.from_label" signature="Operator.from_label(label)" modifiers="classmethod">
    Return a tensor product of single-qubit operators.

    **Parameters**

    **label** (*string*) – single-qubit operator string.

    **Returns**

    The N-qubit operator.

    **Return type**

    [Operator](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")

    **Raises**

    **QiskitError** – if the label contains invalid characters, or the length of the label is larger than an explicitly specified num\_qubits.

    #### Additional Information:

    The labels correspond to the single-qubit matrices: ‘I’: \[\[1, 0], \[0, 1]] ‘X’: \[\[0, 1], \[1, 0]] ‘Y’: \[\[0, -1j], \[1j, 0]] ‘Z’: \[\[1, 0], \[0, -1]] ‘H’: \[\[1, 1], \[1, -1]] / sqrt(2) ‘S’: \[\[1, 0], \[0 , 1j]] ‘T’: \[\[1, 0], \[0, (1+1j) / sqrt(2)]] ‘0’: \[\[1, 0], \[0, 0]] ‘1’: \[\[0, 0], \[0, 1]] ‘+’: \[\[0.5, 0.5], \[0.5 , 0.5]] ‘-‘: \[\[0.5, -0.5], \[-0.5 , 0.5]] ‘r’: \[\[0.5, -0.5j], \[0.5j , 0.5]] ‘l’: \[\[0.5, 0.5j], \[-0.5j , 0.5]]
  </Function>

  <span id="qiskit-quantum-info-operator-input-dims" />

  ### input\_dims

  <Function id="qiskit.quantum_info.Operator.input_dims" signature="Operator.input_dims(qargs=None)">
    Return tuple of input dimension for specified subsystems.
  </Function>

  <span id="qiskit-quantum-info-operator-is-unitary" />

  ### is\_unitary

  <Function id="qiskit.quantum_info.Operator.is_unitary" signature="Operator.is_unitary(atol=None, rtol=None)">
    Return True if operator is a unitary matrix.
  </Function>

  <span id="qiskit-quantum-info-operator-output-dims" />

  ### output\_dims

  <Function id="qiskit.quantum_info.Operator.output_dims" signature="Operator.output_dims(qargs=None)">
    Return tuple of output dimension for specified subsystems.
  </Function>

  <span id="qiskit-quantum-info-operator-power" />

  ### power

  <Function id="qiskit.quantum_info.Operator.power" signature="Operator.power(n)">
    Return the matrix power of the operator.

    **Parameters**

    **n** (*float*) – the power to raise the matrix to.

    **Returns**

    the resulting operator `O ** n`.

    **Return type**

    [Operator](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")

    **Raises**

    **QiskitError** – if the input and output dimensions of the operator are not equal.
  </Function>

  <span id="qiskit-quantum-info-operator-reshape" />

  ### reshape

  <Function id="qiskit.quantum_info.Operator.reshape" signature="Operator.reshape(input_dims=None, output_dims=None, num_qubits=None)">
    Return a shallow copy with reshaped input and output subsystem dimensions.

    **Parameters**

    *   **input\_dims** (*None or tuple*) – new subsystem input dimensions. If None the original input dims will be preserved \[Default: None].
    *   **output\_dims** (*None or tuple*) – new subsystem output dimensions. If None the original output dims will be preserved \[Default: None].
    *   **num\_qubits** (*None or int*) – reshape to an N-qubit operator \[Default: None].

    **Returns**

    returns self with reshaped input and output dimensions.

    **Return type**

    BaseOperator

    **Raises**

    **QiskitError** – if combined size of all subsystem input dimension or subsystem output dimensions is not constant.
  </Function>

  <span id="qiskit-quantum-info-operator-reverse-qargs" />

  ### reverse\_qargs

  <Function id="qiskit.quantum_info.Operator.reverse_qargs" signature="Operator.reverse_qargs()">
    Return an Operator with reversed subsystem ordering.

    For a tensor product operator this is equivalent to reversing the order of tensor product subsystems. For an operator $A = A_{n-1} \otimes ... \otimes A_0$ the returned operator will be $A_0 \otimes ... \otimes A_{n-1}$.

    **Returns**

    the operator with reversed subsystem order.

    **Return type**

    [Operator](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")
  </Function>

  <span id="qiskit-quantum-info-operator-tensor" />

  ### tensor

  <Function id="qiskit.quantum_info.Operator.tensor" signature="Operator.tensor(other)">
    Return the tensor product with another Operator.

    **Parameters**

    **other** ([*Operator*](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – a Operator object.

    **Returns**

    **the tensor product $a \otimes b$, where $a$**

    is the current Operator, and $b$ is the other Operator.

    **Return type**

    [Operator](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")

    <Admonition title="Note" type="note">
      The tensor product can be obtained using the `^` binary operator. Hence `a.tensor(b)` is equivalent to `a ^ b`.
    </Admonition>
  </Function>

  <span id="qiskit-quantum-info-operator-to-instruction" />

  ### to\_instruction

  <Function id="qiskit.quantum_info.Operator.to_instruction" signature="Operator.to_instruction()">
    Convert to a UnitaryGate instruction.
  </Function>

  <span id="qiskit-quantum-info-operator-to-operator" />

  ### to\_operator

  <Function id="qiskit.quantum_info.Operator.to_operator" signature="Operator.to_operator()">
    Convert operator to matrix operator class
  </Function>

  <span id="qiskit-quantum-info-operator-transpose" />

  ### transpose

  <Function id="qiskit.quantum_info.Operator.transpose" signature="Operator.transpose()">
    Return the transpose of the Operator.
  </Function>

  ## Attributes

  ### atol

  <Attribute id="qiskit.quantum_info.Operator.atol" attributeValue="1e-08" />

  ### data

  <Attribute id="qiskit.quantum_info.Operator.data">
    Return data.
  </Attribute>

  ### dim

  <Attribute id="qiskit.quantum_info.Operator.dim">
    Return tuple (input\_shape, output\_shape).
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.quantum_info.Operator.num_qubits">
    Return the number of qubits if a N-qubit operator or None otherwise.
  </Attribute>

  ### qargs

  <Attribute id="qiskit.quantum_info.Operator.qargs">
    Return the qargs for the operator.
  </Attribute>

  ### rtol

  <Attribute id="qiskit.quantum_info.Operator.rtol" attributeValue="1e-05" />

  ### settings

  <Attribute id="qiskit.quantum_info.Operator.settings">
    Return operator settings.
  </Attribute>
</Class>

